...
    <string name="hint_tax_amount">Tax Amount</string>
    <string name="hint_select_reason">Select Reason</string>
    <string name="hint_date">Date</string>
    <string name="hint_tip_amount">Tip Amount</string>

    /***************** ALERT MESSAGES ***************/
    <string name="alert_enter_first_name">Please enter first name</string>
    <string name="alert_invalid_first_name_character">First name should only contain characters or white space.  </string>
    <string name="alert_enter_last_name">Please enter last name</string>
    <string name="alert_invalid_last_name_character">Last name should only contain characters or white space.  </string>
    <string name="alert_enter_email">Please enter email</string>
    <string name="alert_enter_valid_email">Please enter valid email</string>
    <string name="alert_enter_mobile_number">Please enter the phone number</string>
    <string name="alert_invalid_phone_number">Phone number should be 10 to 13 digits</string>
    <string name="alert_enter_password">Please enter password</string>
    <string name="alert_enter_old_password">Please enter old password</string>
    <string name="alert_enter_new_password">Please enter new password</string>
    <string name="alert_enter_confirm_password">Please enter confirm password</string>
    <string name="alert_enter_user_name">Please enter username</string>
    <string name="alert_invalid_user_name_character">Username should contain number or characters.  </string>
...
