...
						android:text="@string/agree_terms_and_condition"
						android:textColor="@color/white"
						android:textSize="14sp" />
				</LinearLayout>
				
				<androidx.appcompat.widget.AppCompatTextView
					android:id="@+id/btnCreate"
					style="@style/ButtonStyle"
					android:layout_width="match_parent"
					android:layout_marginTop="25sp"
					android:text="@string/sign_up" />
			
			</LinearLayout>
...
